# RearrangeDist

./: README.md
src/: rearrangeDist.cabal  rearrangeDist.hs
testData/: test.fastc
